[gd_scene load_steps=7 format=3 uid="uid://c65chuns8kujl"]

[ext_resource type="Script" uid="uid://d3arucc2tku3i" path="res://Scripts/fall_plataform.gd" id="1_d7inl"]
[ext_resource type="Texture2D" uid="uid://chmpb6fx3x1w7" path="res://Images/icon.svg" id="2_p3s8d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pcynr"]
size = Vector2(123.333, 120)

[sub_resource type="Animation" id="Animation_p3s8d"]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2, 0), Vector2(0, 0), Vector2(-2, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_bf7tp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_328r4"]
_data = {
&"RESET": SubResource("Animation_bf7tp"),
&"shake": SubResource("Animation_p3s8d")
}

[node name="fall_plataform" type="AnimatableBody2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_d7inl")

[node name="sprite" type="Sprite2D" parent="."]
modulate = Color(0, 0.785196, 0.786732, 1)
texture = ExtResource("2_p3s8d")

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(-1.66666, 0)
shape = SubResource("RectangleShape2D_pcynr")
one_way_collision = true

[node name="respawn_timer" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_328r4")
}

[connection signal="timeout" from="respawn_timer" to="." method="_on_respawn_timer_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
